--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "simple-peer": "^9.6.2",
+    "simple-peer": "9.6.2",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.0.1"
   },
